everything done need to reset head and put into discrete prs
